<?xml version="1.0" encoding="utf-8"?>
<!--

   AlsaGPS is a panic button app for Android
   Copyright (C) 2016 Moisés Díaz

   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation; either version 3 of the License, or
   (at your option) any later version.

   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with this program; if not, write to the Free Software Foundation,
   Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA

 -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/layout_contacts_phonebook"
            style="@style/layoutInternalScreen">

            <LinearLayout
                android:id="@+id/layout_header"
                style="@style/layoutHeader">

                <TextView
                    android:id="@+id/list_contact_phonebook_header_text"
                    style="@style/addContactHeaderText"/>

                <View
                    android:id="@+id/settings_bar_yellow"
                    style="@style/headerBarYellow" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_body_contacts_phonebook"
                style="@style/layoutBody"
                android:layout_width="wrap_content">

                <LinearLayout
                    android:id="@+id/layout_blank_contacts_phonebook"
                    style="@style/layoutListContactsPhonebook">

                    <ListView
                        android:id="@+id/list_view_add_contact"
                        style="@style/listViewContacts"
                        android:layout_marginTop="-1dp" />
                </LinearLayout>

                <View
                    android:id="@+id/settings_bar"
                    style="@style/headerBarRed" />

                <LinearLayout
                    android:id="@+id/button_add_contact_manually"
                    style="@style/layoutBlankButton">

                    <TextView
                        android:id="@+id/message_button"
                        style="@style/buttonAddContactManually" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        style="@style/layoutLayoutConfirmationMessage"
        android:id="@+id/layout_layout_contact_added"
        android:alpha="0"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/layout_contact_added"
            style="@style/layoutConfirmationMessage">
            <TextView
                android:id="@+id/text_contact_added"
                style="@style/textContactAdded"/>
        </LinearLayout>
    </LinearLayout>

    <!-- BOTTOM BAR -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/backBottomBar"
        android:id="@+id/back_bottom_bar"
        android:layout_gravity="bottom">

        <include layout="@layout/back_bottom_bar" />

    </LinearLayout>

    <LinearLayout
        style="@style/layoutLayoutAddContactBottom"
        android:id="@+id/layout_layout_add_contact_bottom"
        android:visibility="gone">

        <LinearLayout
            style="@style/layoutAddContactBottom"
            android:id="@+id/layout_add_contact_bottom">

            <LinearLayout
                style="@style/backgroundAddContactInput"
                android:id="@+id/backgroundAddContactInput">

                <EditText
                    style="@style/addContactInputName"
                    android:id="@+id/layout_input_name"
                    android:hint="@string/type_name_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_input_number"
                style="@style/backgroundAddContactInput">
                <EditText
                    android:id="@+id/add_contact_input"
                    style="@style/addContactInputNumber"
                    android:hint="@string/type_number_text"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_options_buttons"
                style="@style/layoutOptionsButtons"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:id="@+id/options_button_save"
                    style="@style/optionsButtonSave">

                    <TextView
                        android:id="@+id/location_frequency_save_text"
                        style="@style/blankButton"
                        android:text="@string/save_text" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/options_button_cancel"
                    style="@style/optionsButtonCancel">

                    <TextView
                        android:id="@+id/location_frequency_cancel_text"
                        style="@style/blankButton"
                        android:text="@string/cancel_text"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- END BOTTOM BAR -->

</RelativeLayout>